bug fix for Issue 15926 - Font-size in the blue Help tooltip is too large also moved all the initializations of QI from windows.binding.js to init.js
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@12828 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWHalo/skins/QueryInterface/qi.css
+++ b/extensions/SMWHalo/skins/QueryInterface/qi.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 #qicontent{
   cursor: default;
   font-family: sans-serif;
@@ -675,4 +677,9 @@ button.btnhov{
 
 #layout_sort{
   width: 235px;
+}
+
+/* reduce the font size of qtips */
+.ui-tooltip-qiQtip{
+  font-size: 11px !important;
 }
